@@ -1,6 +1,6 @@
-$NetBSD: distinfo,v 1.2 2004/06/15 13:58:51 markd Exp $
+$NetBSD: distinfo,v 1.3 2004/10/22 16:16:04 jdolecek Exp $
 
-SHA1 (kmymoney2-0.6.tar.bz2) = 6bc8143a8d4bd73b91d364064d579d5cde908f41
-Size (kmymoney2-0.6.tar.bz2) = 1510155 bytes
+SHA1 (kmymoney2-0.6.2.tar.bz2) = c07f45e8320b077ccf435ad4cc52c16b2dfef1f1
+Size (kmymoney2-0.6.2.tar.bz2) = 1548135 bytes
 SHA1 (patch-aa) = 742f6b67c3f9de966f0441c5c5dd16fd8fcc28e3
 SHA1 (patch-ab) = feddf9880c4d2b69fc3297c62618024aec4894f9
